--- a/admin/tourists.html
+++ b/admin/tourists.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calatorie Admin - Tourists</title>
+    <title>Planifica-ti calatoria - Tourists</title>
     
     <!-- Jquery JS file -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -18,17 +18,17 @@
     <script type="text/javascript" src="js/serialize.js"></script>
     <script type="text/javascript" src="js/tourists.js"></script>
 </head>
-<body>
+<body >
+<!--  id="image" style="background: url(fundal.jpg) no-repeat; width: 100%; height: 150px; background-size: 100%;" -->
 
 <!-- Content Section -->
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Locatie Calatorie Admin</h1>
+            <h1>Planifica-ti calatoria</h1>
         </div>
     </div>
     <ul class="nav nav-tabs">
-      <li role="presentation" ><a href="/admin/">Home</a></li>
       <li role="presentation" class="active"><a href="tourists.html">Turisti</a></li>
       <li role="presentation"><a href="locations.html">Locatii</a></li>
     </ul>
